2013-01-30  Roger Fong  <roger_fong@apple.com>

        Enable tests for Windows EWS!
        https://bugs.webkit.org/show_bug.cgi?id=107968.
        Patch by Lucas Forschler.

        Reviewed by Adam Barth.

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        (WinEWS):

2013-01-30  Christophe Dumez  <christophe.dumez@intel.com>

        Add a StringTypeAdapter for ASCIILiteral
        https://bugs.webkit.org/show_bug.cgi?id=108338

        Reviewed by Benjamin Poulain.

        Add API tests for operator+() taking an ASCIILiteral.

        * TestWebKitAPI/Tests/WTF/StringOperators.cpp:
        (TestWebKitAPI::TEST):

2013-01-30  Roger Fong  <roger_fong@apple.com>

        Modify runtests.py script so that --skip-failing-tests option is not added when platform is cygwin.

        Rubberstamped by Timothy Horton.

        * Scripts/webkitpy/tool/steps/runtests.py:
        (RunTests.run):

2013-01-30  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r141205.
        http://trac.webkit.org/changeset/141205
        https://bugs.webkit.org/show_bug.cgi?id=108353

        Command for running tests on windows needs to be investigated.
        (Requested by lforschler on #webkit).

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        (WinEWS):

2013-01-30  Tony Chang  <tony@chromium.org>

        [Chromium] Enable textarea resize corner for tests
        https://bugs.webkit.org/show_bug.cgi?id=108385

        Reviewed by Ojan Vafai.

        We should test what we ship. Also, this makes us pass more tests in content_shell.

        * DumpRenderTree/chromium/TestRunner/src/WebPreferences.cpp:
        (WebTestRunner::WebPreferences::reset): Turn on resize corner.

2013-01-30  Jochen Eisinger  <jochen@chromium.org>

        [chromium] move custom policy delegate to TestRunner library
        https://bugs.webkit.org/show_bug.cgi?id=108328

        Reviewed by Adam Barth.
