@@ -1,3 +1,14 @@
+2013-01-30  Kiran Muppala  <cmuppala@apple.com>
+
+        Disable process suppression of DumpRenderTree on Mac
+        https://bugs.webkit.org/show_bug.cgi?id=108400
+
+        Reviewed by Jessie Berlin.
+
+        * DumpRenderTree/mac/DumpRenderTree.mm:
+        (prepareConsistentTestingEnvironment): Take assertion to prevent
+        process suppression.
+
 2013-01-30  Roger Fong  <roger_fong@apple.com>
 
         Enable tests for Windows EWS!
